--- a/New Unity Project (2)/Assembly-CSharp.csproj
+++ b/New Unity Project (2)/Assembly-CSharp.csproj
@@ -52,7 +52,9 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\ContollerGrabObject.cs" />
+     <Compile Include="Assets\eat.cs" />
      <Compile Include="Assets\LaserPointer.cs" />
+     <Compile Include="Assets\sencer.cs" />
      <Compile Include="Assets\SteamVR\Extras\SteamVR_GazeTracker.cs" />
      <Compile Include="Assets\SteamVR\Extras\SteamVR_LaserPointer.cs" />
      <Compile Include="Assets\SteamVR\Extras\SteamVR_Teleporter.cs" />
